# calorch

./: .env.example  .gitignore  DOC-20260328-WA0000 (1).md  Dockerfile  IMPLEMENTATION_REVIEW.md  README.md  function_app.py  host.json  langgraph.json  local.settings.json  pyproject.toml
.github/workflows/: ci.yml
data/: seed_events.json
data/templates/: analyst_meeting.json  channel_check.json  earnings_call.json  management_meeting.json
deploy/: README.md  azure-functions.md  containerapp.yaml  deploy.ps1
docs/: architecture.html  architecture.md  calorch-durable-functions.excalidraw  calorch-enterprise-data.excalidraw  calorch-multi-agent.excalidraw
docs/audit/: REMEDIATION.md
docs/evaluations/: azure-durable-functions.md  enterprise-data-sources.md  implementation-review-20260602.md  sec-edgar-coverage.md
docs/plans/: analyst-grade-report-templates.md
docs/prep_packs/: AAPL_Channel_Check_20260403.docx  AAPL_Q2_FY2026_Earnings_Prep.docx  AMZN_Q1_FY2026_Earnings_Prep.docx  Chen_KOL_Prep_20260402.docx  JPM_Healthcare_Conference_UNH_Prep_20260401.docx  MSFT_Management_Briefing_20260331.docx  Portfolio_Review_20260402.docx
out_aapl/: summary.json
out_aapl/briefings/: weekly.html
out_aapl/runs/demo-111712/emails/: AAPL-10Q-Q2FY26.html
scripts/: inspect_sec.py  pdf2md.py  probe_sec.py  probe_sec2.py  probe_xbrl.py  render_architecture.py  run_sec.py  show_summary.py
src/calorch/: __init__.py  _earnings_helpers.py  agents.py  alphasense.py  analysis.py  audit.py  blob_reader.py  blob_store.py  cli.py  config.py  data_ingestion.py  fed_h15.py  fred.py  graph.py  http_client.py  knowledge.py  llm.py  llm_enrich.py  logging_config.py  nodes.py  providers.py  rate_limit.py  renderers.py  sec.py  sec_efts.py  sec_ixbrl.py  serve.py  state.py  telemetry.py  templates.py  tiingo.py  tools.py
src/calorch/agents/: __init__.py  base.py
src/calorch/agents/builtin/: __init__.py  analyst_meeting.py  channel_check.py  conference.py  earnings_call.py  internal_review.py  kol_meeting.py  management_meeting.py  portfolio_meeting.py  unknown.py
src/calorch/azure_durable/: __init__.py  activities.py  app.py  orchestrator.py  state.py
src/calorch/data/templates/: conference.json  earnings_call.json  internal_review.json  kol_meeting.json  portfolio_meeting.json
src/calorch/durable/: __init__.py  activities.py  app.py  approval.py  orchestrator.py  state.py
tests/: test_agent_builders.py  test_agents.py  test_alphasense.py  test_approval.py  test_audit.py  test_azure_durable.py  test_blob_store.py  test_classifier.py  test_durable.py  test_fred.py  test_graph.py  test_http_client.py  test_knowledge.py  test_llm.py  test_llm_enrich.py  test_logging_config.py  test_providers.py  test_rate_limit.py  test_renderers.py  test_sec_providers.py  test_serve.py  test_telemetry.py  test_tools.py
