[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calorch"
version = "0.1.0"
description = "Calendar-Driven Intelligent Workflow Orchestrator (LangGraph + Azure Functions reference impl)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=1.0,<2.0",
  "langgraph-checkpoint-postgres>=3.0,<4.0",
  "psycopg[binary]>=3.2,<4.0",
  "langchain-core>=1.0,<2.0",
  "langchain-openai>=0.2",
  "openai>=1.40",
  "python-docx>=1.1",
  "httpx>=0.27",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "tenacity>=8.2",
  "jinja2>=3.1",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "fredapi>=0.5",
  "lxml>=5.0",
  "azure-cosmos>=4.16,<5.0",
]

[project.optional-dependencies]
dev = [
  "langgraph-cli",
  "langgraph-sdk",
]
otel = [
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-httpx>=0.48b0",
  "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[project.scripts]
calorch = "calorch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
calorch = ["templates/*.html", "templates/*.j2"]
